feat: api logout
